// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`doTree php Should build pot file 1`] = `
{
  "": {
    "Huge": {
      "comments": {
        "reference": "tests/fixtures/php.php:252",
        "translator": undefined,
      },
      "msgctxt": "",
      "msgid": "Huge",
      "msgid_plural": "",
      "msgstr": [],
    },
    "Large": {
      "comments": {
        "reference": "tests/fixtures/php.php:247",
        "translator": undefined,
      },
      "msgctxt": "",
      "msgid": "Large",
      "msgid_plural": "",
      "msgstr": [],
    },
    "Light green cyan to vivid green cyan": {
      "comments": {
        "reference": "tests/fixtures/php.php:189",
        "translator": undefined,
      },
      "msgctxt": "",
      "msgid": "Light green cyan to vivid green cyan",
      "msgid_plural": "",
      "msgstr": [],
    },
    "Luminous vivid amber to luminous vivid orange": {
      "comments": {
        "reference": "tests/fixtures/php.php:194",
        "translator": undefined,
      },
      "msgctxt": "",
      "msgid": "Luminous vivid amber to luminous vivid orange",
      "msgid_plural": "",
      "msgstr": [],
    },
    "Luminous vivid orange to vivid red": {
      "comments": {
        "reference": "tests/fixtures/php.php:199",
        "translator": undefined,
      },
      "msgctxt": "",
      "msgid": "Luminous vivid orange to vivid red",
      "msgid_plural": "",
      "msgstr": [],
    },
    "Regular": {
      "comments": {
        "reference": "tests/fixtures/php.php:242",
        "translator": undefined,
      },
      "msgctxt": "",
      "msgid": "Regular",
      "msgid_plural": "",
      "msgstr": [],
    },
    "Small": {
      "comments": {
        "reference": "tests/fixtures/php.php:237",
        "translator": undefined,
      },
      "msgctxt": "",
      "msgid": "Small",
      "msgid_plural": "",
      "msgstr": [],
    },
    "Vivid cyan blue to vivid purple": {
      "comments": {
        "reference": "tests/fixtures/php.php:179",
        "translator": undefined,
      },
      "msgctxt": "",
      "msgid": "Vivid cyan blue to vivid purple",
      "msgid_plural": "",
      "msgstr": [],
    },
    "Vivid green cyan to vivid cyan blue": {
      "comments": {
        "reference": "tests/fixtures/php.php:184",
        "translator": undefined,
      },
      "msgctxt": "",
      "msgid": "Vivid green cyan to vivid cyan blue",
      "msgid_plural": "",
      "msgstr": [],
    },
    "light grayish magenta": {
      "comments": {
        "reference": "tests/fixtures/php.php:123",
        "translator": undefined,
      },
      "msgctxt": "",
      "msgid": "light grayish magenta",
      "msgid_plural": "",
      "msgstr": [],
    },
    "sdasdasdasd": {
      "comments": {
        "reference": "tests/fixtures/php.php:7",
        "translator": "ciao2!",
      },
      "msgctxt": "",
      "msgid": "sdasdasdasd",
      "msgid_plural": "",
      "msgstr": [],
    },
    "strong magenta": {
      "comments": {
        "reference": "tests/fixtures/php.php:118",
        "translator": undefined,
      },
      "msgctxt": "",
      "msgid": "strong magenta",
      "msgid_plural": "",
      "msgstr": [],
    },
    "very dark gray": {
      "comments": {
        "reference": "tests/fixtures/php.php:133",
        "translator": undefined,
      },
      "msgctxt": "",
      "msgid": "very dark gray",
      "msgid_plural": "",
      "msgstr": [],
    },
    "very light gray": {
      "comments": {
        "reference": "tests/fixtures/php.php:128",
        "translator": undefined,
      },
      "msgctxt": "",
      "msgid": "very light gray",
      "msgid_plural": "",
      "msgstr": [],
    },
  },
}
`;

exports[`doTree php Should build pot file php 1`] = `
{
  "": {
    "Huge": {
      "comments": {
        "reference": "tests/fixtures/sourcedir/file.php:252",
        "translator": undefined,
      },
      "msgctxt": "",
      "msgid": "Huge",
      "msgid_plural": "",
      "msgstr": [],
    },
    "Large": {
      "comments": {
        "reference": "tests/fixtures/sourcedir/file.php:247",
        "translator": undefined,
      },
      "msgctxt": "",
      "msgid": "Large",
      "msgid_plural": "",
      "msgstr": [],
    },
    "Light green cyan to vivid green cyan": {
      "comments": {
        "reference": "tests/fixtures/sourcedir/file.php:189",
        "translator": undefined,
      },
      "msgctxt": "",
      "msgid": "Light green cyan to vivid green cyan",
      "msgid_plural": "",
      "msgstr": [],
    },
    "Luminous vivid amber to luminous vivid orange": {
      "comments": {
        "reference": "tests/fixtures/sourcedir/file.php:194",
        "translator": undefined,
      },
      "msgctxt": "",
      "msgid": "Luminous vivid amber to luminous vivid orange",
      "msgid_plural": "",
      "msgstr": [],
    },
    "Luminous vivid orange to vivid red": {
      "comments": {
        "reference": "tests/fixtures/sourcedir/file.php:199",
        "translator": undefined,
      },
      "msgctxt": "",
      "msgid": "Luminous vivid orange to vivid red",
      "msgid_plural": "",
      "msgstr": [],
    },
    "Regular": {
      "comments": {
        "reference": "tests/fixtures/sourcedir/file.php:242",
        "translator": undefined,
      },
      "msgctxt": "",
      "msgid": "Regular",
      "msgid_plural": "",
      "msgstr": [],
    },
    "Small": {
      "comments": {
        "reference": "tests/fixtures/sourcedir/file.php:237",
        "translator": undefined,
      },
      "msgctxt": "",
      "msgid": "Small",
      "msgid_plural": "",
      "msgstr": [],
    },
    "Vivid cyan blue to vivid purple": {
      "comments": {
        "reference": "tests/fixtures/sourcedir/file.php:179",
        "translator": undefined,
      },
      "msgctxt": "",
      "msgid": "Vivid cyan blue to vivid purple",
      "msgid_plural": "",
      "msgstr": [],
    },
    "Vivid green cyan to vivid cyan blue": {
      "comments": {
        "reference": "tests/fixtures/sourcedir/file.php:184",
        "translator": undefined,
      },
      "msgctxt": "",
      "msgid": "Vivid green cyan to vivid cyan blue",
      "msgid_plural": "",
      "msgstr": [],
    },
    "light grayish magenta": {
      "comments": {
        "reference": "tests/fixtures/sourcedir/file.php:123",
        "translator": undefined,
      },
      "msgctxt": "",
      "msgid": "light grayish magenta",
      "msgid_plural": "",
      "msgstr": [],
    },
    "sdasdasdasd": {
      "comments": {
        "reference": "tests/fixtures/sourcedir/file.php:7",
        "translator": "ciao2!",
      },
      "msgctxt": "",
      "msgid": "sdasdasdasd",
      "msgid_plural": "",
      "msgstr": [],
    },
    "strong magenta": {
      "comments": {
        "reference": "tests/fixtures/sourcedir/file.php:118",
        "translator": undefined,
      },
      "msgctxt": "",
      "msgid": "strong magenta",
      "msgid_plural": "",
      "msgstr": [],
    },
    "very dark gray": {
      "comments": {
        "reference": "tests/fixtures/sourcedir/file.php:133",
        "translator": undefined,
      },
      "msgctxt": "",
      "msgid": "very dark gray",
      "msgid_plural": "",
      "msgstr": [],
    },
    "very light gray": {
      "comments": {
        "reference": "tests/fixtures/sourcedir/file.php:128",
        "translator": undefined,
      },
      "msgctxt": "",
      "msgid": "very light gray",
      "msgid_plural": "",
      "msgstr": [],
    },
  },
}
`;
